--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "Browser-Ponies",
+  "name": "Web-Ponies",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "repository": "https://github.com/palindrom615/Browser-Ponies.git",
   "author": "palindrom615",
   "license": "MIT",
   "keywords": [
-    "webpack",
-    "boilerplate",
-    "es6",
-    "babel",
-    "eslint"
+    "browser",
+    "my little pony"
   ],
   "scripts": {
     "prepare": "node scripts/convertIni.js",
@@ -18,31 +15,31 @@
     "build": "webpack --mode production --config conf/webpack.prod.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
-    "babel-loader": "^8.0.4",
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@typescript-eslint/parser": "^1.9.0",
+    "babel-loader": "^8.0.6",
     "bomstrip": "^0.1.4",
-    "clean-webpack-plugin": "^1.0.0",
+    "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^2.0.1",
-    "event-stream": "^3.3.4",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-loader": "^2.1.2",
+    "event-stream": "^3.3.5",
     "file-loader": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "fs-extra": "^7.0.1",
     "html-webpack-plugin": "^3.0.6",
     "style-loader": "^0.23.1",
-    "ts-loader": "^5.3.2",
-    "tslint": "^5.12.0",
-    "tslint-loader": "^3.5.4",
-    "typescript": "^3.2.2",
+    "ts-loader": "^5.4.5",
+    "typescript": "^3.4.5",
     "typescript-formatter": "^7.2.2",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.1.5"
-  },
-  "dependencies": {
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1",
+    "webpack-merge": "^4.2.1",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
     "proper-url-join": "^1.2.0"
   }
 }
