--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
-    "@typescript-eslint/parser": "^1.9.0",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
     "babel-loader": "^8.0.6",
     "bomstrip": "^0.1.4",
     "clean-webpack-plugin": "^1.0.1",
@@ -30,16 +31,15 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "fs-extra": "^7.0.1",
     "html-webpack-plugin": "^3.0.6",
+    "proper-url-join": "^1.2.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.4.5",
-    "typescript": "^3.4.5",
+    "typescript": "^3.5.3",
     "typescript-formatter": "^7.2.2",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1",
-    "webpack-merge": "^4.2.1",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "proper-url-join": "^1.2.0"
+    "webpack-merge": "^4.2.1"
   }
 }
