--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "html-webpack-plugin": "^3.0.6",
     "proper-url-join": "^1.2.0",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^2.3.1",
     "ts-loader": "^5.4.5",
     "typescript": "^3.5.3",
     "typescript-formatter": "^7.2.2",
-    "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1",
