--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Web-Ponies",
+  "name": "web-ponies",
   "version": "1.0.0",
   "main": "src/index.ts",
-  "repository": "https://github.com/palindrom615/Browser-Ponies.git",
+  "repository": "https://github.com/palindrom615/web-ponies.git",
   "author": "palindrom615",
   "license": "MIT",
   "keywords": [
@@ -15,31 +15,43 @@
     "build": "webpack --mode production --config conf/webpack.prod.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@typescript-eslint/eslint-plugin": "^1.12.0",
-    "@typescript-eslint/parser": "^1.12.0",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-typescript": "^7.12.7",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
+    "babel-loader": "^8.2.2",
     "bomstrip": "^0.1.4",
-    "clean-webpack-plugin": "^1.0.1",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^2.1.1",
-    "eslint": "^5.16.0",
-    "eslint-loader": "^2.1.2",
-    "event-stream": "^3.3.5",
-    "file-loader": "^2.0.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "fs-extra": "^7.0.1",
-    "html-webpack-plugin": "^3.0.6",
-    "proper-url-join": "^1.2.0",
-    "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^2.3.1",
-    "ts-loader": "^5.4.5",
-    "typescript": "^3.5.3",
-    "typescript-formatter": "^7.2.2",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1",
-    "webpack-merge": "^4.2.1"
+    "copy-webpack-plugin": "^6.3.2",
+    "css-loader": "^5.0.1",
+    "eslint": "^7.14.0",
+    "eslint-webpack-plugin": "^2.4.0",
+    "event-stream": "^4.0.1",
+    "file-loader": "^6.2.0",
+    "fs-extra": "^9.0.1",
+    "html-webpack-plugin": "^4.5.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.2",
+    "prettier": "^2.2.1",
+    "proper-url-join": "^2.1.1",
+    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.0.3",
+    "typescript": "^4.1.2",
+    "webpack": "^5.8.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^4.0.0-beta.0",
+    "webpack-merge": "^5.4.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{json,js,jsx,ts,tsx,vue,md,css,scss}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
